# avocadocx

./: .bazelignore  .bazelrc  .gitignore  BUILD  Cargo.toml  LICENSE  README.md  WORKSPACE  avocadocx.md  notes  rustfmt.toml  todos.md
.github/workflows/: ci.yml
compiler/: README.md
compiler/ast/: Cargo.toml  README.md
compiler/ast/src/: lib.rs
compiler/codegen/: Cargo.toml  README.md
compiler/codegen/src/: lib.rs
compiler/common/: Cargo.toml  README.md
compiler/common/src/: lib.rs
compiler/lex/: Cargo.toml  README.md
compiler/lex/src/: lib.rs  span.rs  spanned.rs  style.rs  token.rs
compiler/parse/: Cargo.toml  README.md
compiler/parse/src/: ast.rs  lib.rs  peg.rs
compiler/passes/: Cargo.toml  README.md
compiler/passes/src/: lib.rs
defunct/grabdoc/: .gitignore  grab.py
defunct/parsedoc/src/: main.rs
grabdoc/: Cargo.toml  pyproject.toml
grabdoc/src/: main.rs
parsedoc/: Cargo.toml
