[package]
name = "avocadocx"
version = "0.0.0"  # keep in sync
authors = [
    "Rahul Butani <r.r.butan.i+crates@gmail.com>",
    "Joseph Ryan <josephryan3.14+crates@gmail.com>"
]
edition = "2018"
resolver = "2"

description = """TODO"""
documentation = "https://docs.rs/avocadocx"
homepage = "https://github.com/rrbutani/avocadocx"
repository = "https://github.com/rrbutani/avocadocx"

readme = "README.md"

# TODO:
# keywords = {{{ crate keywords }}}
# categories = {{{ crate categories: https://crates.io/category_slugs }}}

license = "MIT"

exclude = [".github"] # TODO

[badges]
is-it-maintained-issue-resolution = { repository = "rrbutani/avocadocx" }
is-it-maintained-open-issues = { repository = "rrbutani/avocadocx" }
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = 3
lto = true
debug = true

[[bin]]
path = "bin/desktop.rs"
name = "avocadocx"

[dependencies]
abogado-common = "0.0.0"
abogado-lex = "0.0.0"
abogado-parse = "0.0.0"
chumsky = "0.3.2"

color-eyre = "0.5" # TODO: something is borked; this should build on stable but doesn't
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
compile = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docs"]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[workspace]
members = [
    # Compiler
    "compiler/common",
    "compiler/lex",
    "compiler/parse",
    "compiler/passes",
    "compiler/codegen",

    # Libraries
    "library/interpreter",
    "library/runtime",
    "library/std",

    # Web
    "bin/web",
]

[patch.crates-io]
"abogado-common" = { path = "compiler/common" }
"abogado-lex" = { path = "compiler/lex" }
"abogado-parse" = { path = "compiler/parse" }
"abogado-passes" = { path = "compiler/passes" }
"abogado-codegen" = { path = "compiler/codegen" }

"avocadocx-interpreter" = { path = "library/interpreter" }
"avocadocx-runtime" = { path = "library/runtime" }
"avocadocx-std" = { path = "library/std" }

"avocadocx-web" = { path = "bin/web" }

# TODO: switch to: git = "https://github.com/rrbutani/docx-rs.git"
"docx-rs" = { path = "./docx-rs/docx-core" }

[package.metadata.raze]
workspace_path = "//crates2"
package_aliases_dir = "crates2"
genmode = "Remote"
