[package]
name = "abogado-parse"
version = "0.0.0"  # keep in sync
authors = [
    "Rahul Butani <r.r.butan.i+crates@gmail.com>",
    "Joseph Ryan <josephryan3.14+crates@gmail.com>"
]
edition = "2018"

description = """TODO"""
documentation = "https://docs.rs/abogado-parse"
homepage = "https://github.com/rrbutani/avocadocx/tree/main/compiler/parse"
repository = "https://github.com/rrbutani/avocadocx/tree/main/compiler/parse"

readme = "README.md"

# TODO:
# keywords = {{{ crate keywords }}}
# categories = {{{ crate categories: https://crates.io/category_slugs }}}

license = "MIT"
# exclude = [""] # TODO

[badges]
is-it-maintained-issue-resolution = { repository = "rrbutani/avocadocx" }
is-it-maintained-open-issues = { repository = "rrbutani/avocadocx" }
maintenance = { status = "actively-developed" }

[dependencies]
abogado-lex = "0.0.0"
peg = "0.7.0"
serde = "1.0.128"
serde_json = "1.0.66"

[features]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "wasm32-unknown-unknown", "wasm32-wasi"]
rustdoc-args = ["--cfg", "docs"]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
